# cloudcore-rust

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
android/: Cargo.toml
android/src/: account.rs  authentication.rs  cache.rs  cloudcore.rs  cloudcore_ffi_api.rs  devices.rs  lib.rs  notifications.rs  pairing.rs  properties.rs  schedules.rs
android/src/authentication/: user_session.rs
android/src/cache/: value.rs
android/src/devices/: device.rs
android/src/notifications/: notification.rs
android/src/pairing/: wifi_network.rs  wifi_state.rs
android/src/properties/: datapoint.rs  property.rs  value.rs
android/src/schedules/: schedule.rs
cloudcore/: Cargo.toml
cloudcore/examples/: account.rs  authentication.rs  cache.rs  devices.rs  error_utils.rs  get_gateway.sh  get_wireless_networks.sh  notifications.rs  pairing.rs  polling.rs  properties.rs  schedule.rs  triggers.rs
cloudcore/src/: account.rs  authentication.rs  cache.rs  cloudcore.rs  cloudcore_client.rs  devices.rs  error_utils.rs  examples.rs  io.rs  lib.rs  notifications.rs  pairing.rs  polling.rs  properties.rs  schedules.rs  triggers.rs  urls.rs
cloudcore/src/account/: user_account.rs
cloudcore/src/authentication/: user_profile.rs  user_session.rs
cloudcore/src/devices/: devices.rs  time_zone.rs
cloudcore/src/examples/: utils.rs
cloudcore/src/notifications/: notifications.rs
cloudcore/src/pairing/: ayla_device.rs  network_requests.rs  wifi_manager.rs  wifi_network.rs  wifi_pairing.rs  wifi_state.rs
cloudcore/src/polling/: manager.rs  poll.rs
cloudcore/src/properties/: datapoint.rs  property.rs  trigger.rs  value.rs
cloudcore/src/schedules/: schedule.rs  schedule_actions.rs
ffi/: Cargo.toml
ffi/src/: account.rs  authentication.rs  cache.rs  cloudcore.rs  devices.rs  lib.rs  notifications.rs  pairing.rs  polling.rs  properties.rs  schedules.rs  triggers.rs
ios/: Cargo.toml
ios/src/: account.rs  authentication.rs  cache.rs  cloudcore.rs  devices.rs  lib.rs  notifications.rs  pairing.rs  properties.rs  schedules.rs
ios/src/authentication/: user_session.rs
ios/src/cache/: value.rs
ios/src/devices/: device.rs
ios/src/notifications/: notification.rs
ios/src/pairing/: wifi_network.rs
ios/src/properties/: datapoint.rs  property.rs  value.rs
ios/src/schedules/: schedule.rs
src/: main.rs
